Bug 88226 - Excessive text in Presentation Notes is not printed
Summary: Excessive text in Presentation Notes is not printed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium major
Assignee: Tibor Nagy
URL:
Whiteboard: target:25.2.0 target:25.8.0 inRelease...
Keywords:
: 145024 (view as bug list)
Depends on:
Blocks: Print
  Show dependency treegraph
 
Reported: 2015-01-09 08:29 UTC by karlowski.natan
Modified: 2026-02-19 10:12 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description karlowski.natan 2015-01-09 08:29:50 UTC
Only a limited amount of text can be written in Presentation Notes - no new pages are created if too much tect is written, it just goes off the page and is unprintable.
Comment 1 Robinson Tryon (qubit) 2015-01-12 09:38:54 UTC
TESTING on Ubuntu 14.04 = LO 4.4.0.2

(In reply to karlowski.natan from comment #0)
> Only a limited amount of text can be written in Presentation Notes - no new
> pages are created if too much tect is written, it just goes off the page and
> is unprintable.

REPRO Steps:
- Open Impress
- Click on 'Notes' tab of first (and only) slide
- Click where it says 'Click to add notes'
- Type a whole bunch, and/or use some Lorem Ipsum; make sure you run several lines off the end of the page
- Print (as a PDF or on real paper)

RESULT: The full text of the notes is cut off

==> CONFIRMED: The bottom of the text is not provided in the print out of the notes.

EXPECTED: The full text of the notes would be present, perhaps printed over multiple pages.
Comment 2 QA Administrators 2016-01-17 20:04:59 UTC Comment hidden (obsolete)
Comment 3 QA Administrators 2017-03-06 14:34:16 UTC Comment hidden (obsolete)
Comment 4 Timur 2019-09-11 13:33:13 UTC
Repro 6.4+.
Comment 5 Timur 2021-10-10 08:34:57 UTC
*** Bug 145024 has been marked as a duplicate of this bug. ***
Comment 6 QA Administrators 2023-10-11 03:15:11 UTC Comment hidden (obsolete, off-topic)
Comment 7 Commit Notification 2024-12-04 09:18:14 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/43e511e642a2ce7026b30ea5c212940ff3eb522e

tdf#88226 sd: fix cutting off the overflow text on the notes print page

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Timur 2024-12-04 19:10:47 UTC
This is for ReleaseNotes, please add, not there now.
Comment 9 Commit Notification 2024-12-09 14:39:37 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6fd252d499ef8b2f88ca8fdab8b989e8d80bae28

Related: tdf#88226 if the paragraphs of notes contain upper and lower

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.