include/editeng/editeng.hxx
@@ -295,7 +295,7 @@ public:
     sal_Int32       GetLineLen( sal_Int32 nParagraph, sal_Int32 nLine ) const;
     void            GetLineBoundaries( /*out*/sal_Int32& rStart, /*out*/sal_Int32& rEnd, sal_Int32 nParagraph, sal_Int32 nLine ) const;
     sal_Int32       GetLineNumberAtIndex( sal_Int32 nPara, sal_Int32 nIndex ) const;
-    SAL_DLLPRIVATE sal_uInt32      GetLineHeight( sal_Int32 nParagraph );
+    SAL_DLLPRIVATE sal_uInt32      GetLineHeight( sal_Int32 nParagraph, sal_Int32 nLine = 0 );
     SAL_DLLPRIVATE tools::Rectangle GetParaBounds( sal_Int32 nPara );
     SAL_DLLPRIVATE ParagraphInfos  GetParagraphInfos( sal_Int32 nPara );
     SAL_DLLPRIVATE sal_Int32       FindParagraph( tools::Long nDocPosY );
